# Voice-AI-Hack

./: .env.example  .gitignore  README.md
backend/: .env.example  bot.py  pyproject.toml
backend/app/: client_events.py  config.py  instrumentation.py  pipeline.py  prompts.py
docs/superpowers/plans/: 2026-04-18-spec-talk-prd-flow.md
frontend/: .env.local.example  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/generate-prd/: route.ts
frontend/src/app/session/: page.tsx
frontend/src/components/ui/: voice-chat.tsx
frontend/src/hooks/: use-pipecat-interview.ts
frontend/src/lib/: pipecat.ts
frontend/src/types/: interview.ts
